--- a/data/Strings.yaml
+++ b/data/Strings.yaml
@@ -1,16 +1,16 @@
-backtotop: back to top
+backtotop: 回到首页
 builtby: built by
 byauthor: by
-comments: Comments
+comments: 评论
 draft: DRAFT
 navigation: Navigation
-lastupdate: last update
-metaReadin: Read in about
+lastupdate: 最后更新
+metaReadin: 阅读时间约
 metaReadinMinutes: min
-next: Next
-previous: Previous
-readmore: Read more
-words: Words
+next: 新文
+previous: 旧篇
+readmore: 阅读更多
+words: 字
 pageNotFoundTitle: 404 Not found
 pageNotFoundDetail: What you're looking for isn't here, sorry!
-backToHomepage: Click here to go back home
+backToHomepage: 点击这里返回首页
